--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "rxjs": "^7.4.0"
+    "rxjs": "^7.4.0",
+    "validator": "^13.6.0"
   }
 }
